--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://viczenith.github.io/ConseQ-X-landing",
   "name": "ceo-assessment-app",
   "version": "0.1.0",
   "private": true,
@@ -18,13 +19,11 @@
     "recharts": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
-  "homepage": "https://you.github.io/conseq-x",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
