--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-syntax-highlighter": "^15.6.6",
     "recharts": "^3.0.0",
     "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^5.0.1",
     "remark-gfm": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -35,6 +36,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "mock:server": "node server/mockJobProcessor.js",
+    "mock:api": "node server/mockApi.js",
+    "mock:ws": "node server/mockWsServer.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
