--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jspdf": "^3.0.3",
     "node-fetch": "^3.3.2",
     "openai": "^3.2.1",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
@@ -29,7 +30,8 @@
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^5.0.1",
     "remark-gfm": "^4.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
